syntax = "proto3";

package worker.tabu;

option java_multiple_files = true;
option java_package = "org.example.tabu.proto";
option java_outer_classname = "TabuWorkerProto";

service TabuWorker {
  rpc StreamEvaluate(stream WorkerMessage)
      returns (stream WorkerResponse);
}

message WorkerMessage {
  oneof payload {
    Init init = 1;
    Iteration iter = 2;
  }
}

enum ObjectiveFunction {
  ROSENBROCK = 0;
  WOODS = 1;
}

message Init {
  int32 rank = 1;
  int32 n = 2;

  int32 chunk_start = 3;
  int32 chunk_end = 4;

  repeated double solution0 = 5; // length n
  repeated double lower = 6;     // length n
  repeated double upper = 7;     // length n

  int32 tabu_tenure = 8;
  ObjectiveFunction objective = 9;
}

message Iteration {
  int32 iteration = 1;
  double step = 2;

  int32 chosen_index = 3;
  int32 chosen_direction = 4;   // -1 or +1
  double chosen_new_value = 5;

  double f_best = 6;

  int32 max_candidates = 7;
}


message WorkerResponse {
  oneof payload {
    IterationResponse iter_resp = 1;
    Ack ack = 2;
  }
}

message Ack {
  string msg = 1;
}

message CandidateMove {
  int32 index = 1;
  int32 direction = 2;
  double new_value = 3;
  double f_value = 4;
}

message IterationResponse {
  int32 iteration = 1;
  repeated CandidateMove candidates = 2;
}
